<?xml version="1.0"?>
<package format="2">
  <name>stereo_sonar</name>
  <version>0.0.1</version>
  <description>
    Orthoganal sonar fusion package
  </description>
  <maintainer email="jmcconn1@stevens.edu">
    John Mcconnell
  </maintainer>
  <license>BSD 3-Clause License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>pybind11_catkin</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>python-sklearn</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sonar_oculus</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
